<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_hight"
        android:layout_marginTop="@dimen/login_edittext_spacing"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/login_padding_spacing"
        android:paddingRight="@dimen/login_padding_spacing"
        android:orientation="horizontal">

        <com.corelib.widget.MyCleanEditText
            android:id="@+id/reserPW_old_password_et"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:password="true"
            android:paddingLeft="@dimen/login_edittext_padding"
            android:paddingRight="@dimen/login_edittext_right_padding"
            android:background="@drawable/gray_red_edittext_bg_selector"
            android:hint="@string/reset_password_old"
            android:textSize="@dimen/login_edittext_text"
            android:textColor="@color/color_black"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_hight"
        android:layout_marginTop="@dimen/login_edittext_spacing"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/login_padding_spacing"
        android:paddingRight="@dimen/login_padding_spacing"
        android:orientation="horizontal">
        <com.corelib.widget.MyCleanEditText
            android:id="@+id/reserPW_new_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:password="true"
            android:paddingLeft="@dimen/login_edittext_padding"
            android:paddingRight="@dimen/login_edittext_right_padding"
            android:background="@drawable/gray_red_edittext_bg_selector"
            android:hint="@string/reset_password_new"
            android:textSize="@dimen/login_edittext_text"
            android:textColor="@color/color_black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_hight"
        android:layout_marginTop="@dimen/login_edittext_spacing"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/login_padding_spacing"
        android:paddingRight="@dimen/login_padding_spacing"
        android:orientation="horizontal">

        <com.corelib.widget.MyCleanEditText
            android:id="@+id/reserPW_conf_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:password="true"
            android:paddingLeft="@dimen/login_edittext_padding"
            android:paddingRight="@dimen/login_edittext_right_padding"
            android:background="@drawable/gray_red_edittext_bg_selector"
            android:hint="@string/reset_password_comf"
            android:textSize="@dimen/login_edittext_text"
            android:textColor="@color/color_black"/>
    </LinearLayout>

    <Button
        android:id="@+id/resetPW_commit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/register_padding"
        android:layout_marginLeft="@dimen/register_padding"
        android:textSize="@dimen/login_button_text"
        android:background="@drawable/red_full_selector"
        android:textColor="@color/color_white"
        android:text="@string/reset_password_bt"/>

</LinearLayout>