<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/part_register_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ly_one"
            android:layout_below="@+id/login_top_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_hight"
            android:layout_marginTop="@dimen/default_padding"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/register_padding"
            android:paddingRight="@dimen/register_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:text="@string/login_username"
                android:gravity="right"
                android:textColor="@color/color_black"
                android:textSize="@dimen/register_tx"/>

            <com.corelib.widget.MyCleanEditText
                android:id="@+id/resetPW_username_et"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/login_password_et"
                android:paddingLeft="@dimen/login_edittext_padding"
                android:paddingRight="@dimen/login_edittext_right_padding"
                android:background="@drawable/gray_red_edittext_bg_selector"
                android:hint="@string/login_username_hint"
                android:textSize="@dimen/register_tx"
                android:textColor="@color/color_black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_two"
            android:layout_below="@+id/ly_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_hight"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/register_padding"
            android:paddingRight="@dimen/register_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:text="@string/resetPW_newpw_tx"
                android:textColor="@color/color_black"
                android:textSize="@dimen/register_tx"/>

            <com.corelib.widget.MyCleanEditText
                android:id="@+id/resetPW_password_et"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:password="true"
                android:paddingLeft="@dimen/login_edittext_padding"
                android:paddingRight="@dimen/login_edittext_right_padding"
                android:background="@drawable/gray_red_edittext_bg_selector"
                android:hint="@string/login_password_hint"
                android:textSize="@dimen/register_tx"
                android:textColor="@color/color_black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_hight"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:paddingLeft="@dimen/register_padding"
            android:paddingRight="@dimen/register_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:text="@string/register_code_tx"
                android:textColor="@color/color_black"
                android:textSize="@dimen/register_tx"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_edittext_hight"
                android:orientation="horizontal">

                <com.corelib.widget.MyCleanEditText
                    android:id="@+id/resetPW_code_et"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/login_password_et"
                    android:paddingLeft="@dimen/login_edittext_padding"
                    android:paddingRight="@dimen/login_edittext_right_padding"
                    android:background="@drawable/gray_red_edittext_bg_selector"
                    android:hint="@string/register_code_tx"
                    android:textSize="@dimen/register_tx"
                    android:textColor="@color/color_black"/>

                <TextView
                    android:id="@+id/bt_getsms"
                    android:layout_marginLeft="5dp"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/red_hollow_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onViewClick"
                    android:text="获取验证码"
                    android:textColor="@color/register_code_tx"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/resetPW_next_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/register_padding"
            android:layout_marginLeft="@dimen/register_padding"
            android:textSize="@dimen/login_button_text"
            android:background="@drawable/red_full_selector"
            android:textColor="@color/color_white"
            android:text="@string/register_next"/>

    </LinearLayout>

</LinearLayout>