<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/part_register_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/register_ic_wight"
                android:layout_height="@dimen/register_ic_wight"
                android:src="@mipmap/register_phone"/>

            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:src="@drawable/red_dotted_line"/>

            <ImageView
                android:layout_width="@dimen/register_ic_wight"
                android:layout_height="@dimen/register_ic_wight"
                android:src="@mipmap/register_password"/>

            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:src="@drawable/gray_dotted_line"/>

            <ImageView
                android:layout_width="@dimen/register_ic_wight"
                android:layout_height="@dimen/register_ic_wight"
                android:src="@mipmap/register_finsh_gray"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/register_header_iv"
            android:layout_marginTop="@dimen/login_padding_spacing"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/personal_head_default"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_hight"
            android:layout_marginTop="@dimen/login_edittext_spacing"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/login_padding_spacing"
            android:paddingRight="@dimen/login_padding_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textColor="@color/login_name_color"
                android:textSize="@dimen/login_edittext_text"/>

            <com.corelib.widget.MyCleanEditText
                android:id="@+id/register_password_et"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:password="true"
                android:paddingLeft="@dimen/login_edittext_padding"
                android:paddingRight="@dimen/login_edittext_right_padding"
                android:background="@drawable/gray_red_edittext_bg_selector"
                android:hint="@string/login_password_hint"
                android:textSize="@dimen/login_edittext_text"
                android:textColor="@color/color_black"/>

        </LinearLayout>

        <Button
            android:id="@+id/register_next_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/register_padding"
            android:layout_marginLeft="@dimen/register_padding"
            android:textSize="@dimen/login_button_text"
            android:background="@drawable/red_full_selector"
            android:textColor="@color/color_white"
            android:text="@string/register_next"/>

    </LinearLayout>

    <include layout="@layout/part_customer_service_view"/>

</LinearLayout>